--- a/Process_2_GEE_Python_Classification/Sub_Process_4_Classification_on_img/Step_1_Classification_use_each_year_point.ipynb
+++ b/Process_2_GEE_Python_Classification/Sub_Process_4_Classification_on_img/Step_1_Classification_use_each_year_point.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        " '2017_2019']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,16 +315,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exporting Invarient_2005_2007 successful!\n",
-      "Exporting Invarient_2002_2004 successful!\n",
-      "Exporting Invarient_1999_2001 successful!\n"
+      "Exporting Zone_invarient_2011_2013 successful!\n",
+      "Exporting Zone_invarient_2014_2016 successful!\n",
+      "Exporting Zone_invarient_2017_2019 successful!\n"
      ]
     }
    ],
    "source": [
-    "for item in Classificatioin_result[4:7]:\n",
+    "for item in Classificatioin_result[22:]:\n",
     "    \n",
-    "    asset_path = 'users/Jinzhu_Deakin/North_China_Plain/Classified_img'\n",
+    "    asset_path = 'users/wang8052664/North_China_Plain/Classified_img'\n",
     "    \n",
     "    Classification_type = item[0]\n",
     "    year = item[1]\n",
@@ -782,7 +782,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
