--- a/Process_2_GEE_Python_Classification/Sub_Process_4_Classification_on_img/Step_1_Classification_use_each_year_point.ipynb
+++ b/Process_2_GEE_Python_Classification/Sub_Process_4_Classification_on_img/Step_1_Classification_use_each_year_point.ipynb
@@ -221,25 +221,9 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 9,
-=======
-   "execution_count": 3,
->>>>>>> 9ad3a3c290a34aaaa0300d3a314c7ac1263473f0
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'Invarient_sample_merge' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-3-1f0a9e6ab6f4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# first put all inputs together\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mstack_name\u001b[0m   \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m'Invarient'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mInvarient_sample_merge\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m                \u001b[1;33m[\u001b[0m\u001b[1;34m'Each_year'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mEach_year_sample_merge\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m                \u001b[1;33m[\u001b[0m\u001b[1;34m'Zone_invarient'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mZone_Invarient_merge\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mstack_year\u001b[0m   \u001b[1;33m=\u001b[0m \u001b[0myear_name\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0myear_name\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0myear_name\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'Invarient_sample_merge' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# first put all inputs together\n",
     "stack_name   = ['Invarient'] * len(Invarient_sample_merge) + \\\n",
@@ -262,37 +246,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-=======
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'Stack_img_sample' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-2796f6fa9b12>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mStack_img_sample\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'Stack_img_sample' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "Stack_img_sample"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
->>>>>>> 9ad3a3c290a34aaaa0300d3a314c7ac1263473f0
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
@@ -355,38 +308,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-<<<<<<< HEAD
-=======
-      "Exporting Invarient_1990_1992 successful!\n",
-      "Exporting Invarient_1993_1995 successful!\n",
-      "Exporting Invarient_1996_1998 successful!\n",
-      "Exporting Invarient_1999_2001 successful!\n",
-      "Exporting Invarient_2002_2004 successful!\n",
-      "Exporting Invarient_2005_2007 successful!\n",
-      "Exporting Invarient_2008_2010 successful!\n",
-      "Exporting Invarient_2011_2013 successful!\n",
-      "Exporting Invarient_2014_2016 successful!\n",
-      "Exporting Invarient_2017_2019 successful!\n",
-      "Exporting Each_year_2005_2007 successful!\n",
-      "Exporting Each_year_2008_2010 successful!\n",
-      "Exporting Each_year_2011_2013 successful!\n",
-      "Exporting Each_year_2014_2016 successful!\n",
-      "Exporting Each_year_2017_2019 successful!\n",
-      "Exporting Zone_invarient_1990_1992 successful!\n",
-      "Exporting Zone_invarient_1993_1995 successful!\n",
-      "Exporting Zone_invarient_1996_1998 successful!\n",
-      "Exporting Zone_invarient_1999_2001 successful!\n",
-      "Exporting Zone_invarient_2002_2004 successful!\n",
-      "Exporting Zone_invarient_2005_2007 successful!\n",
-      "Exporting Zone_invarient_2008_2010 successful!\n",
->>>>>>> 9ad3a3c290a34aaaa0300d3a314c7ac1263473f0
       "Exporting Zone_invarient_2011_2013 successful!\n",
       "Exporting Zone_invarient_2014_2016 successful!\n",
       "Exporting Zone_invarient_2017_2019 successful!\n"
@@ -394,15 +322,9 @@
     }
    ],
    "source": [
-<<<<<<< HEAD
     "for item in Classificatioin_result[22:]:\n",
     "    \n",
     "    asset_path = 'users/wang8052664/North_China_Plain/Classified_img'\n",
-=======
-    "for item in Classificatioin_result:\n",
-    "    \n",
-    "    asset_path = 'users/wangjinzhulala/North_China_Plain_Python/classification_img'\n",
->>>>>>> 9ad3a3c290a34aaaa0300d3a314c7ac1263473f0
     "    \n",
     "    Classification_type = item[0]\n",
     "    year = item[1]\n",
@@ -410,14 +332,12 @@
     "    \n",
     "    export_name = f'{Classification_type}_{year}'\n",
     "    \n",
-    "    task = ee.batch.Export.image.toCloudStorage(image          = img,\n",
-    "                                                description    = export_name,\n",
-    "                                                bucket         = 'north_china_plain',\n",
-    "                                                fileNamePrefix = export_name,\n",
-    "                                                region         = North_China_Plain.geometry().bounds(),\n",
-    "                                                scale          = 30,\n",
-    "                                                maxPixels      = int(1e13),\n",
-    "                                                skipEmptyTiles = True)\n",
+    "    task = ee.batch.Export.image.toAsset(   image        = img,\n",
+    "                                            description  = export_name,\n",
+    "                                            assetId      = f'{asset_path}/{export_name}',\n",
+    "                                            region       = North_China_Plain.geometry().bounds(),\n",
+    "                                            scale        = 30,\n",
+    "                                            maxPixels    = int(1e13))\n",
     "    task.start()\n",
     "    \n",
     "    print(f'Exporting {export_name} successful!')"
@@ -432,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -727,7 +647,7 @@
        "24  ee.FeatureCollection({\\n  \"type\": \"Invocation\"...  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -784,38 +704,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('Zone_invarient',\n",
-       "  '1990_1992',\n",
-       "  <ee.image.Image at 0x26dc3c99f60>,\n",
-       "  <ee.featurecollection.FeatureCollection at 0x26dc3ca6518>),\n",
-       " ('Zone_invarient',\n",
-       "  '1993_1995',\n",
-       "  <ee.image.Image at 0x26dc3c829b0>,\n",
-       "  <ee.featurecollection.FeatureCollection at 0x26dc3cb59e8>),\n",
-       " ('Zone_invarient',\n",
-       "  '1996_1998',\n",
-       "  <ee.image.Image at 0x26dc3c9b780>,\n",
-       "  <ee.featurecollection.FeatureCollection at 0x26dc3cb8438>),\n",
-       " ('Zone_invarient',\n",
-       "  '1999_2001',\n",
-       "  <ee.image.Image at 0x26dc3ca6dd8>,\n",
-       "  <ee.featurecollection.FeatureCollection at 0x26dc3cbd908>)]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Classificatioin_result[15:19]"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -890,11 +782,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-<<<<<<< HEAD
-   "version": "3.8.2"
-=======
    "version": "3.7.3"
->>>>>>> 9ad3a3c290a34aaaa0300d3a314c7ac1263473f0
   }
  },
  "nbformat": 4,
