Change the ext_img_value_to_sample script to only on Invariet points

--- a/Process_2_GEE_Python_Classification/Sub_Process_3_Extract_img_value_to_sample_AND_Accuracy_assessment_diff_bands_combination/Step_1_Extract_img_value_to_sample_points.ipynb
+++ b/Process_2_GEE_Python_Classification/Sub_Process_3_Extract_img_value_to_sample_AND_Accuracy_assessment_diff_bands_combination/Step_1_Extract_img_value_to_sample_points.ipynb
@@ -179,63 +179,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Sample_option_1: Using Verified_2017_2019 as invarient non-built\n",
-    "# _______________  Using Village_1990_1992  as invarient built    __________________________________\n",
-    "\n",
-    "# Sample points serves as INVARIENT points\n",
-    "Invarient_non_built = [ee.FeatureCollection('''users/wangjinzhulala/North_China_Plain_Python/Sample_Points/Verified_pt_2017_2019''')\\\n",
-    "                        .filterMetadata('Built','equals',0)] *  num_invarient\n",
-    "\n",
-    "Invarient_built     = [ee.FeatureCollection('''users/wangjinzhulala/North_China_Plain_Python/Sample_Points/Village_Point_visual_checked_1990_1992''')]\\\n",
-    "                         *  num_invarient\n",
-    "\n",
-    "\n",
-    "# Sample_option_2: Using each year's Verified_points of 2005-2019 as Each_year non-built\n",
-    "# _______________  Using Zone_polygon_to_points of 1990-1992 as Each_year built   __________________________________\n",
-    "\n",
-    "# Sample points serves as EACH_YEAR points\n",
-    "# NOTE: Each_year_visual_check has [9K non-built] and [`1K built]\n",
-    "Each_year_visual_check = [ee.FeatureCollection(f\"users/wangjinzhulala/North_China_Plain_Python/Sample_Points/Verified_pt_{year}\")\n",
-    "                          for year in year_name[-num_each_year:] ]\n",
-    "\n",
-    "# Each_year_built serves as checked-built points, \n",
-    "# which was create by polygon_city_rurul to raster\n",
-    "# based on base map of 1990_1992\n",
-    "Each_year_built        = [ee.FeatureCollection(\"users/Jinzhu_Deakin/North_China_Plain/Zone_sample_point_1990_1992/Zone_Sample\")]\\\n",
-    "                         *  num_invarient"
+    "# Get the training sample\n",
+    "Invarient_training_sample = ee.FeatureCollection(\"users/wangjinzhulala/North_China_Plain_Python/Sample_Points/Traning_Sample\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -271,14 +221,14 @@
     "path = 'users/Jinzhu_Deakin/North_China_Plain/Sample_with_Landsat_Fourier_Normalized'\n",
     "\n",
     "\n",
-    "for year,img,sample in list(zip(year_name,Stack_img,Each_year_built)):\n",
+    "for year,img,sample in list(zip(year_name,Stack_img)):\n",
     "    \n",
-    "    name = 'Each_year_built'\n",
+    "    name = 'Invarient_ext_sample'\n",
     "    \n",
-    "    Ext_sample = img.sampleRegions(collection=sample, \n",
-    "                                    properties=['Built'], \n",
-    "                                    scale=30, \n",
-    "                                    geometries=True)\n",
+    "    Ext_sample = img.sampleRegions(collection  = Invarient_training_sample, \n",
+    "                                    properties = ['Built'], \n",
+    "                                    scale      = 30, \n",
+    "                                    geometries = True)\n",
     "    \n",
     "    # exporting\n",
     "    task = ee.batch.Export.table.toAsset(   collection  = Ext_sample,\n",
