--- a/Process_2_GEE_Python_Classification/Sub_Process_4_Classification_on_img/Step_1_Classification_use_each_year_point.ipynb
+++ b/Process_2_GEE_Python_Classification/Sub_Process_4_Classification_on_img/Step_1_Classification_use_each_year_point.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,21 +308,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exporting Invarient_2005_2007 successful!\n",
-      "Exporting Invarient_2002_2004 successful!\n",
-      "Exporting Invarient_1999_2001 successful!\n"
+      "Exporting Zone_invarient_2002_2004 successful!\n",
+      "Exporting Zone_invarient_2005_2007 successful!\n",
+      "Exporting Zone_invarient_2008_2010 successful!\n"
      ]
     }
    ],
    "source": [
-    "for item in Classificatioin_result[4:7]:\n",
+    "for item in Classificatioin_result[19:22]:\n",
     "    \n",
     "    asset_path = 'users/Jinzhu_Deakin/North_China_Plain/Classified_img'\n",
     "    \n",
