Add [Climate_imgs] as input images

--- a/Process_2_GEE_Python_Classification/Sub_Process_3_Extract_img_value_to_sample_AND_Accuracy_assessment_diff_bands_combination/Step_1_Extract_img_value_to_sample_points.ipynb
+++ b/Process_2_GEE_Python_Classification/Sub_Process_3_Extract_img_value_to_sample_AND_Accuracy_assessment_diff_bands_combination/Step_1_Extract_img_value_to_sample_points.ipynb
@@ -65,9 +65,6 @@
    "source": [
     "# set the num of different sample points\n",
     "num_invarient = 10\n",
-    "num_each_year = 5\n",
-    "\n",
-    "\n",
     "\n",
     "# define the year range\n",
     "year_start = [i for i in range(1990,2018,3)]\n",
@@ -130,7 +127,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# prepare the climate data\n",
+    "Climate_type = ['lrad','prec','pres','shum','srad','temp','wind']\n",
+    "Climate_mean = []\n",
+    "\n",
+    "for year in range(1990,2019,3):   \n",
+    "    \n",
+    "    # define the three years according to year-variable\n",
+    "    year_start = year\n",
+    "    year_mid   = year + 1\n",
+    "    year_end   = year + 2\n",
+    "    \n",
+    "    # Initiate an empty list to hold the climate-tifs-mean from year_start to year_end\n",
+    "    climate_tifs_mean = []\n",
+    "    \n",
+    "    # compute the mean-tif of each climate-type\n",
+    "    for i in Climate_type:\n",
+    "\n",
+    "        # Because cliate_data doesn't include data of 2019, so \n",
+    "        # use if to exclede the data of year 2019\n",
+    "        if year < 2017:\n",
+    "            climate_tifs = [ee.Image(f\"users/wangjinzhulala/North_China_Plain_Python/Climate_data/{i}/{i}_{t}\")                        \n",
+    "                            for t in [year_start,year_mid,year_end]]\n",
+    "            tifs_mean    = ee.ImageCollection(climate_tifs).mean().toFloat().rename(i)\n",
+    "\n",
+    "        else:\n",
+    "            climate_tifs = [ee.Image(f\"users/wangjinzhulala/North_China_Plain_Python/Climate_data/{i}/{i}_{t}\")                        \n",
+    "                            for t in [year_start,year_mid]]\n",
+    "\n",
+    "            tifs_mean    = ee.ImageCollection(climate_tifs).mean().toFloat().rename(i)\n",
+    "\n",
+    "        # add all climate_tifs_mean of year_start to year_end to list\n",
+    "        climate_tifs_mean.append(tifs_mean)\n",
+    "        climate_tifs_mean_img = ee.Image(climate_tifs_mean)\n",
+    "        \n",
+    "\n",
+    "    # add the mean-cliamte-img into the Climate_mean\n",
+    "    Climate_mean.append(climate_tifs_mean_img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,10 +206,24 @@
     "NDBI_img = [ee.Image(f\"users/wensomone666/Jinzhu/Mean_NDVI/Year_{year}_Mean_NDBI\").rename('Mean_NDBI')  \n",
     "            for year in year_name ]\n",
     "EVI_img  = [ee.Image(f\"users/wensomone666/Jinzhu/Mean_NDVI/Year_{year}_Mean_EVI\").rename('Mean_EVI')  \n",
-    "            for year in year_name ]\n",
-    "\n",
-    "# stack Landsat_Fourier_Nomalized together\n",
-    "Stack_img = [ee.Image(img) for img in zip(Landsat_img,Fourier_img,NDVI_img,NDBI_img,EVI_img)]"
+    "            for year in year_name ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# stack all Imput_Img together\n",
+    "Stack_img = [ee.Image(img) for img in zip(Landsat_img,Fourier_img,NDVI_img,NDBI_img,EVI_img,Climate_mean)]"
    ]
   },
   {
@@ -179,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
