--- a/Process_2_GEE_Python_Classification/Sub_Process_3_Extract_img_value_to_sample_AND_Accuracy_assessment_diff_bands_combination/Step_1_Extract_img_value_to_sample_points.ipynb
+++ b/Process_2_GEE_Python_Classification/Sub_Process_3_Extract_img_value_to_sample_AND_Accuracy_assessment_diff_bands_combination/Step_1_Extract_img_value_to_sample_points.ipynb
@@ -65,9 +65,6 @@
    "source": [
     "# set the num of different sample points\n",
     "num_invarient = 10\n",
-    "num_each_year = 5\n",
-    "\n",
-    "\n",
     "\n",
     "# define the year range\n",
     "year_start = [i for i in range(1990,2018,3)]\n",
@@ -179,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,34 +193,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Each_year_built_1990_1992\n",
-      "Each_year_built_1993_1995\n",
-      "Each_year_built_1996_1998\n",
-      "Each_year_built_1999_2001\n",
-      "Each_year_built_2002_2004\n",
-      "Each_year_built_2005_2007\n",
-      "Each_year_built_2008_2010\n",
-      "Each_year_built_2011_2013\n",
-      "Each_year_built_2014_2016\n",
-      "Each_year_built_2017_2019\n"
+      "Invarient_extract_sample_1990_1992\n",
+      "Invarient_extract_sample_1993_1995\n",
+      "Invarient_extract_sample_1996_1998\n",
+      "Invarient_extract_sample_1999_2001\n",
+      "Invarient_extract_sample_2002_2004\n",
+      "Invarient_extract_sample_2005_2007\n",
+      "Invarient_extract_sample_2008_2010\n",
+      "Invarient_extract_sample_2011_2013\n",
+      "Invarient_extract_sample_2014_2016\n",
+      "Invarient_extract_sample_2017_2019\n"
      ]
     }
    ],
    "source": [
     "# define the gee-asset path for exporting\n",
-    "path = 'users/Jinzhu_Deakin/North_China_Plain/Sample_with_Landsat_Fourier_Normalized'\n",
+    "path = 'users/Jinzhu_Deakin/North_China_Plain/Sample_with_Invariant_training_pt'\n",
     "\n",
     "\n",
-    "for year,img,sample in list(zip(year_name,Stack_img)):\n",
+    "for year,img in list(zip(year_name,Stack_img)):\n",
     "    \n",
-    "    name = 'Invarient_ext_sample'\n",
+    "    name = 'Invarient_extract_sample'\n",
     "    \n",
     "    Ext_sample = img.sampleRegions(collection  = Invarient_training_sample, \n",
     "                                    properties = ['Built'], \n",
@@ -279,7 +276,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
