Add climate combination

--- a/Process_2_GEE_Python_Classification/Sub_Process_3_Extract_img_value_to_sample_AND_Accuracy_assessment_diff_bands_combination/Step_2_Accuracy_bands_combination.ipynb
+++ b/Process_2_GEE_Python_Classification/Sub_Process_3_Extract_img_value_to_sample_AND_Accuracy_assessment_diff_bands_combination/Step_2_Accuracy_bands_combination.ipynb
@@ -4639,7 +4639,73 @@
       "2017_2019_Fourier_pct_100_tree_120 accuracy computation finished! ==>0286/2574\n",
       "_________________\n",
       "2017_2019_Landsat_Fourier_pct_001_tree_001 accuracy computation finished! ==>0287/2574\n",
-      "2017_2019_Landsat_Fourier_pct_001_tree_010 accuracy computation finished! ==>0288/2574\n"
+      "2017_2019_Landsat_Fourier_pct_001_tree_010 accuracy computation finished! ==>0288/2574\n",
+      "2017_2019_Landsat_Fourier_pct_001_tree_020 accuracy computation finished! ==>0289/2574\n",
+      "2017_2019_Landsat_Fourier_pct_001_tree_030 accuracy computation finished! ==>0290/2574\n",
+      "2017_2019_Landsat_Fourier_pct_001_tree_040 accuracy computation finished! ==>0291/2574\n",
+      "2017_2019_Landsat_Fourier_pct_001_tree_050 accuracy computation finished! ==>0292/2574\n",
+      "2017_2019_Landsat_Fourier_pct_001_tree_060 accuracy computation finished! ==>0293/2574\n",
+      "2017_2019_Landsat_Fourier_pct_001_tree_070 accuracy computation finished! ==>0294/2574\n",
+      "2017_2019_Landsat_Fourier_pct_001_tree_080 accuracy computation finished! ==>0295/2574\n",
+      "2017_2019_Landsat_Fourier_pct_001_tree_090 accuracy computation finished! ==>0296/2574\n",
+      "2017_2019_Landsat_Fourier_pct_001_tree_100 accuracy computation finished! ==>0297/2574\n",
+      "2017_2019_Landsat_Fourier_pct_001_tree_110 accuracy computation finished! ==>0298/2574\n",
+      "2017_2019_Landsat_Fourier_pct_001_tree_120 accuracy computation finished! ==>0299/2574\n",
+      "_________________\n",
+      "2017_2019_Landsat_Fourier_pct_002_tree_001 accuracy computation finished! ==>0300/2574\n",
+      "2017_2019_Landsat_Fourier_pct_002_tree_010 accuracy computation finished! ==>0301/2574\n",
+      "2017_2019_Landsat_Fourier_pct_002_tree_020 accuracy computation finished! ==>0302/2574\n",
+      "2017_2019_Landsat_Fourier_pct_002_tree_030 accuracy computation finished! ==>0303/2574\n",
+      "2017_2019_Landsat_Fourier_pct_002_tree_040 accuracy computation finished! ==>0304/2574\n",
+      "2017_2019_Landsat_Fourier_pct_002_tree_050 accuracy computation finished! ==>0305/2574\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2017_2019_Landsat_Fourier_pct_002_tree_060 accuracy computation finished! ==>0306/2574\n",
+      "2017_2019_Landsat_Fourier_pct_002_tree_070 accuracy computation finished! ==>0307/2574\n",
+      "2017_2019_Landsat_Fourier_pct_002_tree_080 accuracy computation finished! ==>0308/2574\n",
+      "2017_2019_Landsat_Fourier_pct_002_tree_090 accuracy computation finished! ==>0309/2574\n",
+      "2017_2019_Landsat_Fourier_pct_002_tree_100 accuracy computation finished! ==>0310/2574\n",
+      "2017_2019_Landsat_Fourier_pct_002_tree_110 accuracy computation finished! ==>0311/2574\n",
+      "2017_2019_Landsat_Fourier_pct_002_tree_120 accuracy computation finished! ==>0312/2574\n",
+      "_________________\n",
+      "2017_2019_Landsat_Fourier_pct_003_tree_001 accuracy computation finished! ==>0313/2574\n",
+      "2017_2019_Landsat_Fourier_pct_003_tree_010 accuracy computation finished! ==>0314/2574\n",
+      "2017_2019_Landsat_Fourier_pct_003_tree_020 accuracy computation finished! ==>0315/2574\n",
+      "2017_2019_Landsat_Fourier_pct_003_tree_030 accuracy computation finished! ==>0316/2574\n",
+      "2017_2019_Landsat_Fourier_pct_003_tree_040 accuracy computation finished! ==>0317/2574\n",
+      "2017_2019_Landsat_Fourier_pct_003_tree_050 accuracy computation finished! ==>0318/2574\n",
+      "2017_2019_Landsat_Fourier_pct_003_tree_060 accuracy computation finished! ==>0319/2574\n",
+      "2017_2019_Landsat_Fourier_pct_003_tree_070 accuracy computation finished! ==>0320/2574\n",
+      "2017_2019_Landsat_Fourier_pct_003_tree_080 accuracy computation finished! ==>0321/2574\n",
+      "2017_2019_Landsat_Fourier_pct_003_tree_090 accuracy computation finished! ==>0322/2574\n",
+      "2017_2019_Landsat_Fourier_pct_003_tree_100 accuracy computation finished! ==>0323/2574\n",
+      "2017_2019_Landsat_Fourier_pct_003_tree_110 accuracy computation finished! ==>0324/2574\n",
+      "2017_2019_Landsat_Fourier_pct_003_tree_120 accuracy computation finished! ==>0325/2574\n",
+      "_________________\n",
+      "2017_2019_Landsat_Fourier_pct_005_tree_001 accuracy computation finished! ==>0326/2574\n",
+      "2017_2019_Landsat_Fourier_pct_005_tree_010 accuracy computation finished! ==>0327/2574\n",
+      "2017_2019_Landsat_Fourier_pct_005_tree_020 accuracy computation finished! ==>0328/2574\n",
+      "2017_2019_Landsat_Fourier_pct_005_tree_030 accuracy computation finished! ==>0329/2574\n",
+      "2017_2019_Landsat_Fourier_pct_005_tree_040 accuracy computation finished! ==>0330/2574\n",
+      "2017_2019_Landsat_Fourier_pct_005_tree_050 accuracy computation finished! ==>0331/2574\n",
+      "2017_2019_Landsat_Fourier_pct_005_tree_060 accuracy computation finished! ==>0332/2574\n",
+      "2017_2019_Landsat_Fourier_pct_005_tree_070 accuracy computation finished! ==>0333/2574\n",
+      "2017_2019_Landsat_Fourier_pct_005_tree_080 accuracy computation finished! ==>0334/2574\n",
+      "2017_2019_Landsat_Fourier_pct_005_tree_090 accuracy computation finished! ==>0335/2574\n",
+      "2017_2019_Landsat_Fourier_pct_005_tree_100 accuracy computation finished! ==>0336/2574\n",
+      "2017_2019_Landsat_Fourier_pct_005_tree_110 accuracy computation finished! ==>0337/2574\n",
+      "2017_2019_Landsat_Fourier_pct_005_tree_120 accuracy computation finished! ==>0338/2574\n",
+      "_________________\n",
+      "2017_2019_Landsat_Fourier_pct_007_tree_001 accuracy computation finished! ==>0339/2574\n",
+      "2017_2019_Landsat_Fourier_pct_007_tree_010 accuracy computation finished! ==>0340/2574\n",
+      "2017_2019_Landsat_Fourier_pct_007_tree_020 accuracy computation finished! ==>0341/2574\n",
+      "2017_2019_Landsat_Fourier_pct_007_tree_030 accuracy computation finished! ==>0342/2574\n",
+      "2017_2019_Landsat_Fourier_pct_007_tree_040 accuracy computation finished! ==>0343/2574\n",
+      "2017_2019_Landsat_Fourier_pct_007_tree_050 accuracy computation finished! ==>0344/2574\n"
      ]
     }
    ],
