Climate combination merge

--- a/Process_2_GEE_Python_Classification/BackGround_modules/Class_4_Create_Sample_Classification_instancs.ipynb
+++ b/Process_2_GEE_Python_Classification/BackGround_modules/Class_4_Create_Sample_Classification_instancs.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,6 +129,12 @@
     "        # get the Mean_Normalized band\n",
     "        Mean_re         = re.compile(r'^Mean')\n",
     "        Mean_Normalized = list(filter(Mean_re.match,bands))\n",
+    "        \n",
+    "        # get the Climate band\n",
+    "        Climate_band = ['lrad','prec','pres','shum','srad','temp','wind']\n",
+    "        \n",
+    "        # get the Terrain band\n",
+    "        Terrain_band = ['DEM','SLOPE']\n",
     "\n",
     "        # ________________________Create sample classification instaces_____________________________\n",
     "\n",
@@ -138,7 +144,10 @@
     "                            Landsat_band + Fourier_band,\n",
     "                            Landsat_band + Mean_Normalized,\n",
     "                            Fourier_band + Mean_Normalized,\n",
-    "                            Landsat_band + Fourier_band + Mean_Normalized]\n",
+    "                            Landsat_band + Fourier_band + Mean_Normalized,\n",
+    "                            Landsat_band + Fourier_band + Climate_band,\n",
+    "                            Landsat_band + Fourier_band + Terrain_band,\n",
+    "                            Landsat_band + Fourier_band + Climate_band + Terrain_band]\n",
     "\n",
     "        # create comno_names\n",
     "        global combination_name\n",
@@ -147,7 +156,10 @@
     "                            'Landsat_Fourier',\n",
     "                            'Landsat_Mean',\n",
     "                            'Fourier_Mean',\n",
-    "                            'Landsat_Fourier_Mean']\n",
+    "                            'Landsat_Fourier_Mean',\n",
+    "                            'Landsat_Fourier_Climate',\n",
+    "                            'Landsat_Fourier_Terrain',\n",
+    "                            'Landsat_Fourier_Terrain_Climate']\n",
     "\n",
     "\n",
     "        return list(zip(combination_name,band_combination))\n",
@@ -218,7 +230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
